# docs/swagger.json
@@ -30,7 +30,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/items/": {
             "post": {
                 "description": "Creates a new shopping item from provided json data",
                 "produces": [
